SK-194 fixed last message user name view (nowrap)

--- a/src/styles/hub/ChatList.css
+++ b/src/styles/hub/ChatList.css
@@ -144,6 +144,7 @@
   white-space: nowrap;
 }
 .last-message__uname {
+  text-wrap: nowrap;
   color: var(--color-accent-dark);
   font-weight: 300;
 }
